tests/block_level_fun/block_level_fun.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:18

Cannot resolve name `f`. [cannot-resolve-name]

   5| module.exports = f;
                       ^



Found 1 error
